Hana cloud setup

--- a/package.json
+++ b/package.json
@@ -22,17 +22,7 @@
   },
   "cds": {
     "requires": {
-      "auth": "xsuaa",
-      "db": {
-        "kind": "sqlite",
-        "[production]": {
-          "kind": "hana"
-        },
-        "model": [
-          "db",
-          "srv"
-        ]
-      }
+      "auth": "xsuaa"
     }
   }
 }
