Added role templates

--- a/app/router/xs-app.json
+++ b/app/router/xs-app.json
@@ -6,6 +6,7 @@
       "source": "^/app/(.*)$",
       "target": "$1",
       "localDir": ".",
+      "authenticationType": "xsuaa",
       "cacheControl": "no-cache, no-store, must-revalidate"
     },
     {
@@ -17,7 +18,8 @@
       "source": "^/(.*)$",
       "target": "$1",
       "destination": "srv-api",
-      "csrfProtection": true
+      "csrfProtection": true,
+      "authenticationType":"xsuaa"
     }
   ]
 }
